--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,23 +1,27 @@
-<h1>画像投稿フォーム</h1>
-
-<% if @post_image.errors.any? %>
-  <%= @post_image.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @post_image.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<div class="card-list-container py-5">
+  <% post_images.each do |post_image| %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <%= link_to post_image_path(post_image.id) do %>
+      <%= image_tag post_image.get_image, class:"card-img-top"; %>
     <% end %>
-  </ul>
-<% end %>
-
-
-<%= form_with model: @post_image do |f| %>
-  <h4>画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-  <h4>ショップ名</h4>
-  <%= f.text_field :shop_name %>
-  <h4>説明</h4>
-  <%= f.text_area :caption %>
-  <%= f.submit '投稿' %>
-<% end %>
-
-
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <%= image_tag post_image.user.get_profile_image(100,100), class:"mt-3 rounded-circle"; %>
+        </div>
+        <div class="col-10">
+          <p class="card-title">
+            <%= link_to(post_image_path(post_image.id), class:"text-dark") do %>
+              <strong><i class="fa-regular fa-flag"></i><span> <%= post_image.shop_name %></span></strong>
+            <% end %>
+          </p>
+          <p class="card-text">説明：<%= post_image.caption %></p>
+          <span><i class="fa-solid fa-user"></i> By <%= post_image.user.name %> ｜ </span>
+          <span><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id), class:"text-dark" %></span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <% end %>
+  <%= paginate post_images %>
+</div>
