--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,15 +3,12 @@
 <%= form_with model: @user, url: user_registration_path do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-<div class="field">
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
-</div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <p>ユーザー名と<br>パスワードを入力してください。</p>
+<%= form_with model: @user, url: user_session_path do |f| %>
+  <div class="input-group-prepend">
+    <span class="input-group-text" aria-hidden="true"><i class="fas fa-user"></i></span>
   </div>
+<%= f.text_field :name, autofocus: true, class: "form-control", placeholder: "ユーザー名" %>
 
   <div class="field">
     <%= f.label :password %>
@@ -29,6 +26,7 @@
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
+<% end %>
 <% end %>
 
 <%= render "devise/shared/links" %>
